<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>trex-corfu</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>trex-locks</name>
    <url>https://github.com/trex-paxos/trex-paxos-jvm</url>
    <description>
        This is an implementation of a Corfu distributed log. It makes use of the Trex Paxos library to provide
        embedded advisory locks and strong cluster membership.
    </description>
    <parent>
        <groupId>com.github.trex-paxos</groupId>
        <artifactId>trex</artifactId>
        <version>1.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <properties>
        <maven.compiler.source>24</maven.compiler.source>
        <maven.compiler.target>24</maven.compiler.target>
        <maven.compiler.release>24</maven.compiler.release>
        <maven.compiler.args>--enable-preview</maven.compiler.args>
    </properties>
    <dependencies>
        <dependency>
            <groupId>net.jqwik</groupId>
            <artifactId>jqwik</artifactId>
            <version>1.9.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.trex-paxos</groupId>
            <artifactId>trex-lib</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2-mvstore</artifactId>
            <version>2.3.232</version>
        </dependency>
        <dependency>
            <groupId>com.github.trex-paxos</groupId>
            <artifactId>trex-lib</artifactId>
            <version>${project.version}</version>
            <classifier>tests</classifier>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
